--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -36,42 +36,37 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/cereal/include)
 file(GLOB sources ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
 file(GLOB headers ${CMAKE_CURRENT_LIST_DIR}/timemory/*.hpp)
 
-add_library(timemory-object OBJECT ${sources} ${headers})
-add_library(timemory-shared SHARED $<TARGET_OBJECTS:timemory-object>)
-add_library(timemory-static STATIC $<TARGET_OBJECTS:timemory-object>)
-target_link_libraries(timemory-shared ${EXTERNAL_LIBRARIES})
-target_link_libraries(timemory-static ${EXTERNAL_LIBRARIES})
+add_library(${LIBNAME}-object OBJECT ${sources} ${headers})
+add_library(${LIBNAME}-shared SHARED $<TARGET_OBJECTS:${LIBNAME}-object>)
+add_library(${LIBNAME}-static STATIC $<TARGET_OBJECTS:${LIBNAME}-object>)
+target_link_libraries(${LIBNAME}-shared ${EXTERNAL_LIBRARIES})
+target_link_libraries(${LIBNAME}-static ${EXTERNAL_LIBRARIES})
 
-set_target_properties(timemory-shared PROPERTIES
-    OUTPUT_NAME timemory
+set_target_properties(${LIBNAME}-shared PROPERTIES
+    OUTPUT_NAME ${LIBNAME}
     VERSION ${PROJECT_VERSION}
     SOVERSION ${PROJECT_VERSION_MAJOR})
-set_target_properties(timemory-static PROPERTIES
-    OUTPUT_NAME timemory
+set_target_properties(${LIBNAME}-static PROPERTIES
+    OUTPUT_NAME ${LIBNAME}
     VERSION ${PROJECT_VERSION})
 
 #----------------------------------------------------------------------------
 # PyBind11
 #
-pybind11_add_module(timemory ${CMAKE_CURRENT_LIST_DIR}/timemory.cc)
-target_link_libraries(timemory PRIVATE timemory-shared)
-
-if(NOT PYBIND11_PYTHON_VERSION)
-    execute_process(COMMAND ${PYTHON_EXECUTABLE} --version
-        OUTPUT_VARIABLE PYTHON_VERSION
-        OUTPUT_STRIP_TRAILING_WHITESPACE)
-    string(REGEX REPLACE "[ A-Za-z]" "" PYTHON_VERSION "${PYTHON_VERSION}")
-    string(REGEX REPLACE "\.([0-9]+)$" "" PYTHON_VERSION "${PYTHON_VERSION}")
-    set(PYBIND11_PYTHON_VERSION "${PYTHON_VERSION}"
-        CACHE STRING "Python version" FORCE)
-endif(NOT PYBIND11_PYTHON_VERSION)
+pybind11_add_module(${LIBNAME} ${CMAKE_CURRENT_LIST_DIR}/${LIBNAME}.cc)
+target_link_libraries(${LIBNAME} PRIVATE ${LIBNAME}-shared)
 
 #----------------------------------------------------------------------------
-# Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
+# Install the targets and export
 #
-install(TARGETS timemory-shared timemory-static 
-    DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS ${LIBNAME}-shared ${LIBNAME}-static
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    EXPORT ${PROJECT_NAME}LibraryDepends)
 install(FILES ${headers}
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/timemory)
-install(TARGETS timemory
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/python${PYBIND11_PYTHON_VERSION}/site-packages)
+install(TARGETS ${LIBNAME}
+    DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
+# Install the export set for use with the install-tree
+install(EXPORT ${PROJECT_NAME}LibraryDepends
+    DESTINATION ${CMAKE_INSTALL_CMAKEDIR}
+    COMPONENT dev)
