Configurable namespace via -DTIMEMORY_NAMESPACE=<...>
- Override default tim:: namespace with CMake option -DTIMEMORY_NAMESPACE which sets preprocessor definition NAME_TIM to that value

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -74,3 +74,5 @@ elseif(BUILD_STATIC_LIBRARIES)
 else()
     set(@PROJECT_NAME@_LIBRARIES @LIBNAME@-shared)
 endif(BUILD_SHARED_LIBRARIES)
+
+add_definitions(-DNAME_TIM=@TIMEMORY_NAMESPACE@)
