Enabled PIC + argparse funcs + Python lib links to static lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ list(APPEND EXTERNAL_LIBRARIES ${MPI_LIBRARIES})
 include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 foreach(_TYPE ARCHIVE LIBRARY RUNTIME)
     set(CMAKE_${_TYPE}_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 endforeach(_TYPE ARCHIVE LIBRARY RUNTIME)
