--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -52,7 +52,8 @@ set_target_properties(${LIBNAME}-static PROPERTIES
 # PyBind11
 #
 pybind11_add_module(${LIBNAME} ${CMAKE_CURRENT_LIST_DIR}/${LIBNAME}.cc)
-target_link_libraries(${LIBNAME} PRIVATE ${LIBNAME}-shared)
+# link to static library so no need for RPATH resolution
+target_link_libraries(${LIBNAME} PRIVATE ${LIBNAME}-static)
 
 #----------------------------------------------------------------------------
 # Install the targets and export
