--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -54,6 +54,14 @@ set_target_properties(${LIBNAME}-static PROPERTIES
 pybind11_add_module(${LIBNAME} ${CMAKE_CURRENT_LIST_DIR}/${LIBNAME}.cc)
 # link to static library so no need for RPATH resolution
 target_link_libraries(${LIBNAME} PRIVATE ${LIBNAME}-static)
+configure_file(${PROJECT_SOURCE_DIR}/examples/timemory_plot.py
+    ${PROJECT_BINARY_DIR}/timemory-supp/timemory_plot.py)
+file(WRITE ${PROJECT_BINARY_DIR}/timemory-supp/__init__.py
+"#!/usr/bin/env python
+
+from .timemory_plot import *
+
+")
 
 #----------------------------------------------------------------------------
 # Install the targets and export
@@ -65,6 +73,10 @@ install(FILES ${headers}
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/timemory)
 install(TARGETS ${LIBNAME}
     DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
+install(FILES
+    ${PROJECT_BINARY_DIR}/timemory-supp/timemory_plot.py
+    ${PROJECT_BINARY_DIR}/timemory-supp/__init__.py
+    DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/timemory-supp)
 # Install the export set for use with the install-tree
 install(EXPORT ${PROJECT_NAME}LibraryDepends
     DESTINATION ${CMAKE_INSTALL_CMAKEDIR}
