Bug fixes for Linux
- py::return_value_policy::take_ownership for new "timer"
- RSS current in incorrect units for Linux
- Added thread linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,17 @@ list(APPEND EXTERNAL_LIBRARIES ${MPI_LIBRARIES})
 
 ################################################################################
 #
+#        Threading
+#
+################################################################################
+
+set(CMAKE_THREAD_PREFER_PTHREADS ON)
+find_package(Threads)
+list(APPEND EXTERNAL_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
+
+
+################################################################################
+#
 #        Miscellaneous
 #
 ################################################################################
