--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -53,7 +53,7 @@ set_target_properties(${LIBNAME}-static PROPERTIES
 #
 pybind11_add_module(${LIBNAME} ${CMAKE_CURRENT_LIST_DIR}/${LIBNAME}.cc)
 # link to static library so no need for RPATH resolution
-target_link_libraries(${LIBNAME} PRIVATE ${LIBNAME}-static)
+target_link_libraries(${LIBNAME} PRIVATE ${LIBNAME}-static ${EXTERNAL_LIBRARIES})
 configure_file(${PROJECT_SOURCE_DIR}/examples/timemory_plot.py
     ${PROJECT_BINARY_DIR}/timemory-supp/timemory_plot.py)
 file(WRITE ${PROJECT_BINARY_DIR}/timemory-supp/__init__.py
