--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -11,6 +11,11 @@ foreach(_TYPE LIB INCLUDE PYTHON)
     set(@PROJECT_NAME@_${_TYPE}_DIRS ${@PROJECT_NAME@_${_TYPE}_DIR})
 endforeach(_TYPE LIB INCLUDE PYTHON)
 
+set(@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS @EXTERNAL_INCLUDE_DIRS@)
+foreach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
+    list(APPEND @PROJECT_NAME@_INCLUDE_DIRS SYSTEM ${_DIR})
+endforeach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
+
 include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@LibraryDepends.cmake)
 
 if(DEFINED CMAKE_CXX_STANDARD)
