--- a/examples/ex1/CMakeLists.txt
+++ b/examples/ex1/CMakeLists.txt
@@ -9,9 +9,13 @@ foreach(_DIR ${TiMemory_INCLUDE_DIRS})
 endforeach(_DIR ${TiMemory_INCLUDE_DIRS})
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TiMemory_C_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TiMemory_CXX_FLAGS}")
 
 #----------------------------------------------------------------------------
 # Add the executable, and link it to the TiMemory libraries
 #
 add_executable(timemory_test_timing test_timing.cpp)
 target_link_libraries(timemory_test_timing ${TiMemory_LIBRARIES})
+
+install(TARGETS timemory_test_timing DESTINATION bin)
