--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -38,27 +38,27 @@ foreach(_LIBTYPE SHARED STATIC)
     if("${CMAKE_BUILD_TYPE}" MATCHES "${CMAKE_CONFIGURATION_TYPES}")
         set(IMPORTED_LOCATION_BUILD IMPORTED_LOCATION_${_BUILD_TYPE})
     else("${CMAKE_BUILD_TYPE}" MATCHES "${CMAKE_CONFIGURATION_TYPES}")
-        set(IMPORTED_LOCATION_BUILD )    
+        set(IMPORTED_LOCATION_BUILD )
     endif("${CMAKE_BUILD_TYPE}" MATCHES "${CMAKE_CONFIGURATION_TYPES}")
 
-    foreach(_LOC 
-            IMPORTED_LOCATION 
+    foreach(_LOC
+            IMPORTED_LOCATION
             ${IMPORTED_LOCATION_BUILD}
-            IMPORTED_LOCATION_RELEASE 
-            IMPORTED_LOCATION_RELWITHDEBINFO 
-            IMPORTED_LOCATION_DEBUG 
+            IMPORTED_LOCATION_RELEASE
+            IMPORTED_LOCATION_RELWITHDEBINFO
+            IMPORTED_LOCATION_DEBUG
             IMPORTED_LOCATION_MINSIZEREL)
         if(NOT _${_LIBTYPE}_LOCATION)
             get_target_property(_SHARED_LOCATION @LIBNAME@-shared ${_LOC})
         endif(NOT _${_LIBTYPE}_LOCATION)
-    endforeach(_LOC 
-            IMPORTED_LOCATION 
+    endforeach(_LOC
+            IMPORTED_LOCATION
             ${IMPORTED_LOCATION_BUILD}
-            IMPORTED_LOCATION_RELEASE 
+            IMPORTED_LOCATION_RELEASE
             IMPORTED_LOCATION_RELWITHDEBINFO
-            IMPORTED_LOCATION_DEBUG 
+            IMPORTED_LOCATION_DEBUG
             IMPORTED_LOCATION_MINSIZEREL)
-        
+
     STRING(TOLOWER "${_LIBTYPE}" _LIBTAG)
     if(_${_LIBTYPE}_LOCATION)
         set(@PROJECT_NAME@_${_LIBTYPE}_LIBRARY ${_${_LIBTYPE}_LOCATION}
@@ -67,9 +67,9 @@ foreach(_LIBTYPE SHARED STATIC)
         set(@PROJECT_NAME@_${_LIBTYPE}_LIBRARY @LIBNAME@-${_LIBTAG}
             CACHE INTERNAL "@PROJECT_NAME@ ${_LIBTAG} library")
     endif(_${_LIBTYPE}_LOCATION)
-    
+
     unset(_${_LIBTYPE}_LOCATION)
-    
+
 endforeach(_LIBTYPE SHARED STATIC)
 
 if(BUILD_SHARED_LIBRARIES)
@@ -81,9 +81,12 @@ else()
 endif(BUILD_SHARED_LIBRARIES)
 
 add_definitions(-DNAME_TIM=@TIMEMORY_NAMESPACE@)
+if(@TIMEMORY_EXCEPTIONS@)
+    add_definitions(-DTIMEMORY_EXCEPTIONS)
+endif(@TIMEMORY_EXCEPTIONS@)
 
 set(@PROJECT_NAME@_C_FLAGS "@CMAKE_C_FLAGS@")
-set(@PROJECT_NAME@_CXX_FLAGS "@CMAKE_CXX_FLAGS@")
+set(@PROJECT_NAME@_CXX_FLAGS "@CMAKE_CXX_FLAGS@ -std=c++${CMAKE_CXX_STANDARD}")
 
 include(FindPackageHandleStandardArgs)
 # handle the QUIETLY and REQUIRED arguments and set UnitTest++_FOUND to TRUE
