--- a/examples/ex1/CMakeLists.txt
+++ b/examples/ex1/CMakeLists.txt
@@ -3,10 +3,16 @@ cmake_minimum_required(VERSION 3.1.3 FATAL_ERROR)
 #----------------------------------------------------------------------------
 project(TiMemory-Example1)
 
-find_package(TiMemory REQUIRED)
-foreach(_DIR ${TiMemory_INCLUDE_DIRS})
-    include_directories(SYSTEM ${_DIR})
-endforeach(_DIR ${TiMemory_INCLUDE_DIRS})
+if("${CMAKE_PROJECT_NAME}" STREQUAL "TiMemory")
+    include_directories(${CMAKE_SOURCE_DIR}/source)
+    set(TiMemory_LIBRARIES timemory-shared ${EXTERNAL_LIBRARIES})
+else()
+    find_package(TiMemory REQUIRED)
+    foreach(_DIR ${TiMemory_INCLUDE_DIRS})
+        include_directories(SYSTEM ${_DIR})
+    endforeach(_DIR ${TiMemory_INCLUDE_DIRS})
+endif()
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TiMemory_C_FLAGS}")
