Better MT output of auto-timers + more tests
- Threads use a thread-local timing_manager
- Thread timing output is divided by threads adding to timer
- Added C++ test to ensure
- Added tests checking primary timing_manager does not get deleted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,9 @@ add(CMAKE_CXX_FLAGS "-W -Wall -Wextra")
 add(CMAKE_CXX_FLAGS "-Wno-implicit-fallthrough")
 add(CMAKE_CXX_FLAGS "-Wno-shadow-field-in-constructor-modified")
 add(CMAKE_CXX_FLAGS "-Wno-unused-private-field -Wno-exceptions")
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+    add(CMAKE_CXX_FLAGS "-DDEBUG")
+endif("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
 if(UNIX)
     add(CMAKE_CXX_FLAGS "-pthread")
 endif(UNIX)
