Added nested.py to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -154,6 +154,7 @@ install:
 script:
     - ./test.py
     - ./unit_testing.py
+    - ./nested.py
     - ./timemory_test_timing
     - echo "Done"
 
