Prelim Windows mem support + removed util namespace + new plot funcs
- Added Windows memory measurements (preliminary)
- Removed ambiguous util namespace
- Added a way to plot JSON output without having to add to file
- Updated 'nested.py' to new plot method
- Added try-except in tim.util.plot(...) function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ include(MacroUtilities)
 # By setting TIMEMORY_NAMESPACE, the project can directly
 # use TiMemory in its own namespace, e.g.:
 # TIMEMORY_NAMESPACE=toast
-#   tim::util::timing_manager --> toast::util::timing_manager
+#   tim::timing_manager --> toast::timing_manager
 #
 ################################################################################
 
