setup.py + README.rst
- Added a setup.py for PyPi pip installation
- Minor mods to compile-test
- CMake modifications for setup.py
- Travis testing to setup.py
- Additional README.rst from:
    pandoc --from=markdown --to=rst --output=README.rst README.md

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,12 @@
 *~
 
 # build directories
-/build-*
+/build*
+
+# setup.py files
+/dist*
+/TiMemory.*
+/timemory.*
+
+# miscellaneous
+timing_report*
