--- a/.travis.yml
+++ b/.travis.yml
@@ -138,8 +138,10 @@ before_install:
 install:
     - env
     - echo "--> ${PWD}"
+    - export SOURCE_DIR=${PWD}
     - mkdir -p build-timemory
     - cd build-timemory
+    - export BUILD_DIR=${PWD}
     - echo "CC = ${CC} $(${CC} -dumpversion)"
     - echo "CXX = ${CXX} $(${CXX} -dumpversion)"
     - echo "--> ${PWD}"
@@ -152,9 +154,20 @@ install:
 
 
 script:
-    - ./test.py
-    - ./unit_testing.py
-    - ./nested.py
-    - ./timemory_test_timing
-    - echo "Done"
-
+    - ./timemory_test_timing &> run.log
+    - RET=$?
+    - if [ "${RET}" -ne 0 ]; then cat run.log ; fi
+    - echo "C++ testing -- Done"
+    - ./test.py &> run.log
+    - RET=$?
+    - if [ "${RET}" -ne 0 ]; then cat run.log ; fi
+    - ./unit_testing.py &> run.log
+    - RET=$?
+    - if [ "${RET}" -ne 0 ]; then cat run.log ; fi
+    - ./nested.py &> run.log
+    - RET=$?
+    - if [ "${RET}" -ne 0 ]; then cat run.log ; fi 
+    - echo "Python testing -- Done"
+    - cd ${SOURCE_DIR}
+    - python setup.py build
+    - echo "Python setup.py -- Done"
