--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
             - build-essential
             - cmake3
             - libmpich-dev
+            - mpich
             - tk
       env:
         - MATRIX_EVAL="CC=$(which gcc-4.9) && CXX=$(which g++-4.9)"
@@ -41,6 +42,7 @@ matrix:
             - build-essential
             - cmake3
             - libmpich-dev
+            - mpich
             - tk
       env:
         - MATRIX_EVAL="CC=$(which gcc-5) && CXX=$(which g++-5)"
@@ -58,6 +60,7 @@ matrix:
             - build-essential
             - cmake3
             - libmpich-dev
+            - mpich
             - tk
       env:
         - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6)"
@@ -75,6 +78,7 @@ matrix:
             - build-essential
             - cmake3
             - libmpich-dev
+            - mpich
             - tk
       env:
         - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7)"
@@ -93,6 +97,7 @@ matrix:
             - build-essential
             - cmake3
             - libmpich-dev
+            - mpich
             - tk
       env:
         - MATRIX_EVAL="CC=$(which clang-4.0) && CXX=$(which clang++-4.0)"
@@ -111,6 +116,7 @@ matrix:
             - build-essential
             - cmake3
             - libmpich-dev
+            - mpich
             - tk
       env:
         - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0)"
